--- a/quiz.css
+++ b/quiz.css
@@ -3,8 +3,7 @@
 	box-shadow: 5px 5px 5px rgba(0, 0, 0, .5);
 }
 .carProductCard {
-	margin: 10px 30px;
-	text-align: center;
+	margin: 30px;
 }
 
 .borderWidth {
